--- a/_config.yml
+++ b/_config.yml
@@ -68,6 +68,7 @@ disqus: vikkiblog
 author: "Vignesh Ragupathy"
 website: https://blog.vikki.in
 google_analytics: UA-75997179-1
+#google_analytics: G-K7E6VWSBHK
 show_excerpts: true
 header_pages:
   - pages/photography.markdown
