updated linkedin username

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ url: "https://blog.vikki.in" # the base hostname & protocol for your site, e.g. 
 twitter_username: vikkiintweet
 github_username:  vigneshragupathy
 youtube_channelid: VigneshRagupathy
-linkedin_username: vignesh88
+linkedin_username: vigneshragupathy
 
 # Build settings
 theme: tale
